--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
-    "universal-cookie": "^5.0.0"
+    "universal-cookie": "^5.0.0",
+    "yup": "^1.2.0"
   }
 }
