--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_URL=http://localhost:8080/carRental
-NEXT_PUBLIC_API_IMG_URL=http://localhost:8080/
+NEXT_PUBLIC_API_URL=http://18.118.198.144:8080/carRental
+NEXT_PUBLIC_API_IMG_URL=http://18.118.198.144:8080/
